# wasm-base-components

./: .releaserc.json  CHANGELOG.md  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml  commitlint.yaml  deploy.yaml  publish.yaml  release.yaml
components/http-mcp/: .gitignore  Cargo.toml  Justfile  README.md  build.rs  wasmcloud.toml
components/http-mcp/scripts/: mcp_error_unknown_rpc_method.sh  mcp_error_wrong_content_type.sh  mcp_error_wrong_method.sh  mcp_initialize.sh  mcp_tools_call.sh  mcp_tools_list.sh
components/http-mcp/src/: actions.rs  config.rs  lib.rs  mcp.rs  types.rs  validation.rs
components/http-mcp/src/config/: mod.rs
components/http-mcp/src/mcp/: mod.rs
components/http-mcp/tests/: integration_test.rs  integration_test_mcp.rs
components/http-mcp/tests/fixtures/: betty_mcp_component.wasm  jwt_auth_component.wasm  mock_actions.wasm
components/http-mcp/tests/mock-actions/: Cargo.toml  wasmcloud.toml
components/http-mcp/tests/mock-actions/src/: lib.rs
components/http-mcp/tests/mock-actions/wit/: world.wit
components/http-mcp/wit/: world.wit
components/http-wrapper/: wasmcloud.toml
components/http-wrapper/src/: lib.rs
components/http-wrapper/wit/: world.wit
components/logs-writer/: .gitignore  Cargo.toml  build.rs  wasmcloud.toml
components/logs-writer/src/: lib.rs
components/logs-writer/test-component/: Cargo.toml  wasmcloud.toml
components/logs-writer/test-component/src/: lib.rs
components/logs-writer/test-component/wit/: world.wit
components/logs-writer/tests/: logs_writer_integration_test.rs
components/logs-writer/tests/common/: mod.rs
components/logs-writer/wit/: world.wit
components/utilities/auth/: Cargo.toml  README.md  wasmcloud.toml
components/utilities/auth/src/: lib.rs
components/utilities/auth/wit/: world.wit
components/utilities/crud/: Cargo.toml  wasmcloud.toml
components/utilities/crud/src/: lib.rs
components/utilities/crud/wit/: world.wit
components/utilities/data-api/: .gitignore  build.rs  wasmcloud.toml
components/utilities/data-api/src/: lib.rs
components/utilities/data-api/test-component/: Cargo.toml  wasmcloud.toml
components/utilities/data-api/test-component/src/: lib.rs
components/utilities/data-api/tests/: data_api_integration_test.rs
components/utilities/data-api/wit/: world.wit
components/utilities/log-to-stdout/src/: lib.rs
components/utilities/upload-file/: .gitignore  Cargo.toml
components/utilities/upload-file/src/: lib.rs  upload.rs
components/utilities/upload-file/wit/: world.wit
deploy/: index.ts  keyvault-secrets-generate.js  package.json  render.ts
helper/crud/: README.md  wasmcloud.toml
helper/crud/src/: lib.rs
helper/crud/wit/: world.wit
helper/data-api/: Cargo.toml  Justfile  build.rs  wasmcloud.toml
helper/data-api/src/: lib.rs
helper/data-api/test-component/: wasmcloud.toml
helper/data-api/test-component/src/: lib.rs
helper/data-api/test-component/wit/: world.wit
helper/data-api/tests/: data_api_integration_test.rs  mod.rs
helper/http-wrapper/: README.md  wasmcloud.toml
helper/http-wrapper/src/: lib.rs
helper/log-to-stdout/: Justfile
integration-test/: .gitignore  Cargo.toml  Justfile  build.rs
integration-test/components/fetcher/src/: lib.rs
integration-test/tests/: integration_test_mcp.rs
providers/smtp-provider/: Justfile
providers/smtp-provider/component/src/: lib.rs
providers/smtp-provider/src/: provider.rs
providers/smtp-provider/tests/: smtp_integration_test.rs
wit/: action.wit  actions.wit  auth.wit  data-api.wit  types.wit
