[workspace]
resolver = "2"
members = [
    "components/http-mcp",
    "components/http-mcp/tests/mock-actions",
    "components/http-wrapper",
    "components/utilities/auth",
    "components/utilities/crud",
    "components/utilities/data-api",
    "components/utilities/data-api/test-component",
    "components/utilities/log-to-stdout",
    "integration-test",
]
# fetcher is excluded because it pins matchit 0.8.6 which has conflict with
# data-api's transitive matchit =0.8.4 (via tonic -> axum). It's built
# separately by `wash build` and doesn't need workspace resolution.
exclude = [
    "integration-test/components/fetcher",
    "components/logs-writer",
]
