[package]
name = "mcp-integration-test"
edition = "2021"
version = "0.1.0"
publish = false

# No lib — this crate exists only for integration tests
[[test]]
name = "integration_test_mcp"
path = "tests/integration_test_mcp.rs"

[dependencies]

[dev-dependencies]
wash-runtime = { git = "https://github.com/wasmcloud/wash", branch = "main" }
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
anyhow = "1.0"
jsonwebtoken = "9.3"
bytes = "1"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
