[package]
name = "mcp-component"
edition = "2021"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.51"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-mcp-schema = "=0.9.5"
jsonschema = { version = "0.28", default-features = false }
wstd = "0.6.5"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
