[package]
name = "mcp-component"
edition = "2021"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.51"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-mcp-schema = "=0.9.5"
jsonschema = { version = "0.28", default-features = false }
wstd = "0.6.5"

[dev-dependencies]
wash-runtime = { git = "https://github.com/bettyblocks/wash", rev = "45e778cd692a86cacdfc8dac748f9be9bc4d304b" }
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
axum = "0.8"
anyhow = "1.0"
jsonwebtoken = "9.3"
bytes = "1"
semver = "1.0"
uuid = { version = "1.8", features = ["v4"] }
