[package]
name = "logs-writer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
jaws-rs = { git = "https://github.com/bettyblocks/jaws-rs.git", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.44"
uuid = { version = "1.8.0", features = ["v4"] }
waki = "0.5.1"
wit-bindgen = "0.52.0"

[dev-dependencies]
anyhow = "1.0.100"
axum = "0.7.9"
bytes = "1.11.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
semver = "1.0.27"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
wash-runtime = { git = "https://github.com/bettyblocks/wash", branch = "feat/ordering-remote-test" }
