[package]
name = "data-api-component"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
wit-bindgen = "0.48.0"
wasmcloud-grpc-client = { git = "https://github.com/Aditya1404Sal/wasmcloud-grpc-client.git", branch="master" }
wasmcloud-component = "0.2.0"
tokio = { version = "1.48.0", features = ["rt"] }
prost = "0.13"
jaws-rs = { git = "https://github.com/bettyblocks/jaws-rs.git", version = "0.1.0" }
tonic = { version = "0.13", default-features = false, features = ["codegen", "prost"] }
uuid = { version = "1.8.0", features = ["v4"] }
tracing = "0.1"

[dev-dependencies]
wash-runtime = { git = "https://github.com/bettyblocks/wash", features = ["grpc"], branch = "feat/add-grpc-client" }
tonic = { version = "0.13", default-features = false, features = ["codegen", "prost", "transport"] }
serde_json = "1.0.145"
bytes = "1.11.0"
semver = "1.0.27"
reqwest = {version = "0.12.24", default-features = false, features = ["json"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serial_test = "3.2.0"

[build-dependencies]
tonic-build = "0.13"
