[package]
name = "jwt-auth-component"
edition = "2021"
version = "0.1.0"

[workspace]

[dependencies]
wit-bindgen = "0.47"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"

[dev-dependencies]
rand = "0.8"
rsa = { version = "0.9", features = ["std"] }

[lib]
crate-type = ["cdylib"]
